Vertex and veight paint shading bug #42647

Closed
opened 2014-11-19 15:25:20 +01:00 by Alexey · 10 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
vertex_shadind_paint.png
vertex_shadind_paint2.png
vertex_shadind_paint3.png
vertex_shadind_paint4.png
Exact steps for others to reproduce the error
wretex_shading_bug.blend
open,
look on model - proper shading (flat)
select vertex paint mode - proper shading (flat)
select solid shading mode - incorrect shading - (smooth)
select weight paint mode - incorrect shading(smooth)

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![vertex_shadind_paint.png](https://archive.blender.org/developer/F124849/vertex_shadind_paint.png) ![vertex_shadind_paint2.png](https://archive.blender.org/developer/F124851/vertex_shadind_paint2.png) ![vertex_shadind_paint3.png](https://archive.blender.org/developer/F124853/vertex_shadind_paint3.png) ![vertex_shadind_paint4.png](https://archive.blender.org/developer/F124855/vertex_shadind_paint4.png) **Exact steps for others to reproduce the error** [wretex_shading_bug.blend](https://archive.blender.org/developer/F124857/wretex_shading_bug.blend) open, look on model - proper shading (flat) select vertex paint mode - proper shading (flat) select solid shading mode - incorrect shading - (smooth) select weight paint mode - incorrect shading(smooth)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Can't reproduce on latest master

Can't reproduce on latest master
Antonis Ryakiotakis self-assigned this 2014-11-20 15:07:24 +01:00

Confirmed, on vertex buffers off

Confirmed, on vertex buffers off

This issue was referenced by 4878444ce7

This issue was referenced by 4878444ce70e51a064feda721110cbc9e38f4ea8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4878444ce7.

Closed by commit 4878444ce7.

This issue was referenced by d6931a6ce6b53ec068dda808078d2ef230216ae9

This issue was referenced by d6931a6ce6b53ec068dda808078d2ef230216ae9

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42647
No description provided.