Fix T42647, vertex and weight painting mode do not display solid shaded when VBOs is off.